--- a/src/scss/blocks/_counter.scss
+++ b/src/scss/blocks/_counter.scss
@@ -1,13 +1,14 @@
 .counter {
   max-width: 500px;
-  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
   color: #000000;
   font-size: 25px;
+  padding-top: 10px;
 
   &__elem {
+    position: relative;
     color: #000000;
     display: flex;
     flex-direction: column;
@@ -32,5 +33,29 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 10px;
+  }
+}
+
+@media (max-width: 575px) {
+  .counter {
+    &__desc-days,
+    &__desc-hours,
+    &__desc-minutes,
+    &__desc-seconds {
+      font-size: 10px;
+    }
+
+    #seconds,
+    #minutes,
+    #hours,
+    #days {
+      width: 60px;
+      height: 60px;
+    }
+  }
+
+  .circle {
+    width: 60px;
+    height: 60px;
   }
 }
