--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -1,4 +1,41 @@
 .header {
   font-size: 20px;
   color: #000000;
+  width: 100%;
+  height: 70px;
+  padding-top: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 2px solid rgb(0, 0, 0, .2);
+
+  &__title {
+    font-size: 36px;
+    text-align: center;
+    margin: 0;
+  }
+}
+
+@media (max-width: 1200px) {
+  .header {
+    &__title {
+      font-size: 28px;
+    }
+  }
+}
+
+@media (max-width: 991px) {
+  .header {
+    &__title {
+      font-size: 23px;
+    }
+  }
+}
+
+@media (max-width: 767px) {
+  .header {
+    &__title {
+      font-size: 20px;
+    }
+  }
 }
