--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,14 +5,22 @@
 @import "blocks/counter";
 @import "blocks/header";
 @import "svg-style/counter-circle";
+@import "blocks/select-date";
+@import "blocks/git-link";
 
 .main {
   font-family: "Roboto", sans-serif;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
+  background: rgb(19, 253, 141);
+}
+.container {
+  max-width: 500px;
+  height: calc(100vh - 90px);
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
-  background: #13fd8d;
+  background: rgb(19, 253, 141);
 }
