--- a/src/scss/blocks/_counter.scss
+++ b/src/scss/blocks/_counter.scss
@@ -34,6 +34,11 @@
     align-items: center;
     margin-bottom: 10px;
   }
+
+  .circle {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 @media (max-width: 575px) {
@@ -52,10 +57,5 @@
       width: 60px;
       height: 60px;
     }
-  }
-
-  .circle {
-    width: 60px;
-    height: 60px;
   }
 }
