--- a/src/scss/blocks/_git-link.scss
+++ b/src/scss/blocks/_git-link.scss
@@ -2,9 +2,7 @@
   fill: #151513;
   color: #fff;
   position: fixed;
-  top: 0;
   border: 0;
-  left: 0;
   height: 12vmin;
   transform: rotate(270deg);
 }
@@ -21,7 +19,10 @@
 .github-corner:hover .octo-arm {
   animation: octocat-wave 560ms ease-in-out;
 }
-
+.github-corner {
+  position: absolute;
+  top: -1px;
+}
 @keyframes octocat-wave {
   0%,
   100% {
