--- a/src/scss/variable/_variables.scss
+++ b/src/scss/variable/_variables.scss
@@ -1,2 +1,6 @@
-$circle-size: 100px;
-$border-radius-btn: 10px;
+// $circle-size: 100px;
+// $border-radius-btn: 10px;
+$header-heigth: 65px;
+$header-heigth-575: 50px;
+
+$hover-panel-elem-color: rgba(255, 255, 255, 0.2);
