--- a/src/scss/blocks/_counter.scss
+++ b/src/scss/blocks/_counter.scss
@@ -1,61 +1,64 @@
 .counter {
-  max-width: 500px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: #000000;
-  font-size: 25px;
-  padding-top: 10px;
+  grid-area: tab_content;
+  background: white;
+  // min-height: 100%;
+//   max-width: 500px;
+//   display: flex;
+//   justify-content: space-between;
+//   align-items: center;
+//   color: #000000;
+//   font-size: 25px;
+//   padding-top: 10px;
 
-  &__elem {
-    position: relative;
-    color: #000000;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+//   &__elem {
+//     position: relative;
+//     color: #000000;
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: center;
+//     align-items: center;
 
-    &:not(:first-child) {
-      margin-left: 15px;
-    }
-  }
+//     &:not(:first-child) {
+//       margin-left: 15px;
+//     }
+//   }
 
-  #seconds,
-  #minutes,
-  #hours,
-  #days {
-    font-size: 32px;
-    background: #c4f9e7;
-    border-radius: 50%;
-    width: $circle-size;
-    height: $circle-size;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 10px;
-  }
+//   #seconds,
+//   #minutes,
+//   #hours,
+//   #days {
+//     font-size: 32px;
+//     background: #c4f9e7;
+//     border-radius: 50%;
+//     width: $circle-size;
+//     height: $circle-size;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     margin-bottom: 10px;
+//   }
 
-  .circle {
-    width: 100%;
-    height: 100%;
-  }
+//   .circle {
+//     width: 100%;
+//     height: 100%;
+//   }
 }
 
-@media (max-width: 575px) {
-  .counter {
-    &__desc-days,
-    &__desc-hours,
-    &__desc-minutes,
-    &__desc-seconds {
-      font-size: 10px;
-    }
+// @media (max-width: 575px) {
+//   .counter {
+//     &__desc-days,
+//     &__desc-hours,
+//     &__desc-minutes,
+//     &__desc-seconds {
+//       font-size: 10px;
+//     }
 
-    #seconds,
-    #minutes,
-    #hours,
-    #days {
-      width: 60px;
-      height: 60px;
-    }
-  }
-}
+//     #seconds,
+//     #minutes,
+//     #hours,
+//     #days {
+//       width: 60px;
+//       height: 60px;
+//     }
+//   }
+// }
