--- a/src/scss/blocks/main-content/_counter.scss
+++ b/src/scss/blocks/main-content/_counter.scss
@@ -1,7 +1,7 @@
 .counter {
-  grid-area: tab_content;
   background: white;
-  // min-height: 100%;
+  display: none;
+  min-height: 100%;
 //   max-width: 500px;
 //   display: flex;
 //   justify-content: space-between;
