--- a/src/scss/blocks/_btns.scss
+++ b/src/scss/blocks/_btns.scss
@@ -1,3 +1,29 @@
+.main-btn {
+  width: 100%;
+  height: 50px;
+  border-radius: 10px;
+  border: none;
+  outline: 2px solid var(--input-out-color);
+  outline-offset: 2px;
+  text-align: center;
+  font-size: 20px;
+  background-color: var(--input-color-bg);
+  transition: transform 0.25s ease-out;
+  
+  &:hover {
+    cursor: pointer;
+  }
+
+  &:active {
+    transform: scale(0.95);
+  }
+
+  &:hover {
+    background-color: var(--input-color-bg-hover);
+  }
+
+}
+
 .header-btn {
   width: 35px;
   height: 35px;
@@ -45,3 +71,4 @@
     }
   }
 }
+
