--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -1,8 +1,8 @@
 .header {
   grid-area: header;
   display: grid;
-  grid-template: calc($header-heigth - 2px) 2px / 10% 1fr 10%;
-  max-height: $header-heigth;
+  grid-template: calc(var(--header-heigth) - 2px) 2px / 10% 1fr 10%;
+  max-height: var(--header-heigth);
   user-select: none;
 
   &__tabs {
@@ -15,7 +15,7 @@
   &__title {
     text-align: center;
     margin: 0;
-    line-height: $header-heigth;
+    line-height: var(--header-heigth);
     font-style: normal;
     font-weight: 250;
     font-size: 40px;
@@ -54,11 +54,11 @@
 
 @media (max-width: 575px) {
   .header {
-    grid-template: calc($header-heigth-575 - 2px) 2px / 15% 1fr 15%;
-    max-height: $header-heigth-575;
+    grid-template: calc(var(--header-heigth-575) - 2px) 2px / 15% 1fr 15%;
+    max-height: var(--header-heigth-575);
 
     &__title {
-      line-height: $header-heigth-575;
+      line-height: var(--header-heigth-575);
       letter-spacing: 0.1em;
       font-size: 16px;
     }
