--- a/src/scss/blocks/main-content/countdown/_countdown.scss
+++ b/src/scss/blocks/main-content/countdown/_countdown.scss
@@ -2,8 +2,9 @@
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  
-    &__elem {
+  z-index: -1;
+
+  &__elem {
     position: relative;
     color: #000000;
     display: flex;
@@ -27,46 +28,60 @@
       weight: 500;
       size: 32px;
     }
-    
+
     border-radius: 50%;
-    width: $circle-size;
-    height: $circle-size;
+    width: var(--circle-size);
+    height: var(--circle-size);
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 10px;
+    z-index: 2;
   }
 }
 
-  .circle {
-    width: 100%;
-    height: 100%;
+.circle {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+
+  &__svg {
+    --offset: -1px;
     position: absolute;
-    top: 0;
-
-    &__svg {
-      --offset: -1px;
-      position: absolute;
-      top: var(--offset);
-      right: var(--offset);
-      bottom: var(--offset);
-      left: var(--offset);
-      transform: rotate(-90deg);
-    }
-  
-    &__segment-seconds,
-    &__segment-minutes,
-    &__segment-hours,
-    &__segment-days {
-      fill: transparent;
-      stroke: url(#gradient);
-      stroke-width: 2px;
-      stroke-dasharray: 45 60;
-      stroke-linecap: round;
-      transform: scale(4.7);
-      transform-origin: center;
-      transition: stroke-dasharray 1s linear;
-    }
-
-
+    top: var(--offset);
+    right: var(--offset);
+    bottom: var(--offset);
+    left: var(--offset);
+    transform: rotate(-90deg);
   }
+
+  &__segment-seconds,
+  &__segment-minutes,
+  &__segment-hours,
+  &__segment-days {
+    fill: var(--circle-color-bg);
+    stroke: url(#gradient);
+    stroke-width: 2px;
+    stroke-dasharray: 45 60;
+    stroke-linecap: round;
+    transform: scale(4.7);
+    transform-origin: center;
+    transition: stroke-dasharray 1s linear;
+  }
+}
+
+@media (max-width: 767px) {
+  .countdown {
+    &__elem {
+      width: 100px;
+    }
+
+    #seconds,
+    #minutes,
+    #hours,
+    #days {
+      height: 100px;
+    }
+  }
+}
