--- a/src/scss/blocks/main-content/countdown/_counter.scss
+++ b/src/scss/blocks/main-content/countdown/_counter.scss
@@ -77,7 +77,7 @@
   .counter {
     align-items: center;
     justify-items: center;
-    grid-template-rows: 50px 150px 80px 80px 1fr;
+    grid-template-rows: 50px 150px 43px 53px 1fr;
 
     &__select-date {
       width: 90%;
@@ -85,6 +85,18 @@
 
     &__start-btn {
       width: 90%;
+    }
+  }
+}
+
+@media (max-width: 575px) {
+  .counter {
+    grid-template-rows: 57px 87px 63px 54px 1fr;
+    grid-template-columns: 100%;
+    gap: 0;
+
+    &__title {
+      font-size: 18px;
     }
   }
 }
