adding gen-pass markup and styles

--- a/src/scss/blocks/_btns.scss
+++ b/src/scss/blocks/_btns.scss
@@ -9,7 +9,7 @@
   font-size: 20px;
   background-color: var(--input-color-bg);
   transition: transform 0.25s ease-out;
-  z-index: -2;
+  // z-index: -2;
 
   &:hover {
     cursor: pointer;
