--- a/src/scss/blocks/_btns.scss
+++ b/src/scss/blocks/_btns.scss
@@ -22,6 +22,10 @@
   &:hover {
     background-color: var(--input-color-bg-hover);
   }
+
+  &_stopwatch {
+    width: 50%;
+  }
 }
 
 .header-btn {
@@ -73,5 +77,14 @@
 
   .main-btn {
     height: 25px;
+  }
+}
+
+
+@media (max-width: 575px) {
+  .main-btn {
+    &_stopwatch {
+      width: 70%;
+    }
   }
 }
