--- a/src/scss/blocks/main-content/stopwatch/_stopwarch.scss
+++ b/src/scss/blocks/main-content/stopwatch/_stopwarch.scss
@@ -23,7 +23,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      flex: 1 1 auto;
+      flex: 1 1 50px;
       font-size: 1000%;
     }
 
@@ -56,6 +56,10 @@
     justify-content: flex-start;
     align-items: center;
     gap: 20px;
+
+    // #stopwatch-circle {
+    //   display: none;
+    // }
   }
 
   .circle-list {
