--- a/src/scss/blocks/main-content/gen-pass/_gen-pass.scss
+++ b/src/scss/blocks/main-content/gen-pass/_gen-pass.scss
@@ -8,13 +8,20 @@
   grid-template-columns: 1fr 2fr;
   grid-template-rows: 150px 1fr;
 
+  #add-pass {
+    font-size: 17px;
+  }
   &__current-pass {
     display: flex;
     align-items: center;
     grid-area: pass;
     justify-content: center;
-    font-size: 29px;
+    font-size: 24px;
     letter-spacing: 5.5px;
+    border: 2px solid var(--input-out-color);
+    border-radius: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
 
   &__options {
