--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,6 +11,7 @@
 @import "blocks/main-content/stopwatch//stopwarch";
 @import "blocks/main-content/todo-list/todo-list";
 @import "blocks/main-content/calculate/calc";
+@import "blocks/main-content/qr-code/qr-code";
 
 :root {
   --circle-size: 130px;
